--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -34,8 +34,22 @@ jobs:
     - name: Run flake8 for syntax check
       run: docker compose exec web flake8 .
 
-    - name: Run Django tests
-      run: docker compose exec web python manage.py test
+    - name: Run Django tests with coverage
+      run: docker compose exec web coverage run manage.py test
+
+    # coverage report in terminal
+    - name: Display coverage report
+      run: docker compose exec web coverage report
+
+    - name: Generate HTML coverage report
+      run: docker compose exec web coverage html
+
+    # upload coverage report
+    - name: Upload coverage report
+      uses: actions/upload-artifact@v3
+      with:
+        name: coverage-html-report
+        path: ./htmlcov
 
     - name: Down Docker Compose services
       if: always()
