--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -94,7 +94,7 @@ jobs:
             REPO_BRANCH="dev"
 
             # Clone or update repo from GitHub
-            if [ -d "/home/$USER/$REPO_NAME" ]; then
+            if [ -d "/$HOME/$REPO_NAME" ]; then
               echo "Directory exists. Pulling latest changes..."
               cd "/home/$USER/$REPO_NAME" || { echo "Failed to change directory"; exit 1; }
               git pull origin $REPO_BRANCH || { echo "Failed to pull latest changes"; exit 1; }
