--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -24,5 +24,5 @@ http {
     keepalive_timeout  65;
     types_hash_max_size 2048;
 
-    include /etc/nginx/conf.d/*.conf;
+    include /etc/nginx/conf.d/app.conf;
 }
