--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -20,7 +20,12 @@ server {
 
 server {
     listen 443 ssl http2;
-    include ssl.conf*;
+    ssl_certificate /etc/nginx/certs/cert.crt;
+    ssl_certificate_key /etc/nginx/certs/cert.key;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers HIGH:!aNULL:!MD5;
 
     location / {
         proxy_pass http://web:8000;
